# paint-project

./: Cargo.toml  README.md
web/: Cargo.toml  index.html
web/src/: components.rs  main.rs  pages.rs  router.rs
web/src/components/: canvas.rs  header.rs  nav.rs  pattern.rs
web/src/components/pattern/: grid.rs
web/src/contexts/: history.rs
web/src/pages/: about.rs  contact.rs  home.rs  login.rs  not_found.rs  pattern_detail.rs  pattern_list.rs  privacy.rs  search_results.rs  signup.rs  terms.rs  user_dashboard.rs  user_pattern_editor.rs
web/src/pages/user_pattern_editor/: components.rs  history.rs  reducer.rs
web/src/pages/user_pattern_editor/components/: pattern_cell_editor.rs  toolbar.rs
web/src/pages/user_pattern_editor/containers/: editor.rs
web/styles/: Nav.css  PatternCell.css  PatternEditor.css  PatternGrid.css  global.css  main.css
