[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
gloo = "0.11.0"
implicit-clone = "0.4.9"
indexmap = "2.2.6"
log = "0.4.22"
thiserror = "1.0.61"
wasm-bindgen = "0.2.92"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.69", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "TextMetrics", "DomRect", "Element"] }
# this is the development version of Yew
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
